# CSc-85011-Distributed-Computing-Project

./: Makefile  README.md  api docs.txt  script.sh  ssh-key.txt
back-end/demo/: pom.xml
back-end/demo/src/main/java/com/example/demo/controller/: MainController.java
back-end/demo/src/main/java/com/example/demo/domain/: Domain.java  Job.java
back-end/demo/src/main/java/com/example/demo/dto/: JobDTO.java
back-end/demo/src/main/java/com/example/demo/repository/: JobRepository.java
back-end/demo/src/main/java/com/example/demo/service/: JobService.java
broking-back-end/demo/: pom.xml
broking-back-end/demo/scripts/: fbznhcyosy  okzmniuulq
broking-back-end/demo/src/main/java/com/example/demo/controller/: MainController.java
broking-back-end/demo/src/main/java/com/example/demo/domain/: Domain.java  Job.java
broking-back-end/demo/src/main/java/com/example/demo/dto/: DomainDTO.java  JobDTO.java
broking-back-end/demo/src/main/java/com/example/demo/repository/: DomainRepository.java  JobRepository.java
broking-back-end/demo/src/main/java/com/example/demo/service/: MainService.java
broking-back-end/demo/src/main/resources/: application.properties
broking-back-end/demo/src/test/java/com/example/demo/: DistributedSystemsBrokerApplicationTests.java
doc/: Distributed Systems.postman_collection.json  Nan_Jia_request.rspec.xml  README.md
domain-back-end/demo/: pom.xml
domain-back-end/demo/src/main/java/com/example/demo/: DistributedSystemsBrokerApplication.java
domain-back-end/demo/src/main/java/com/example/demo/controller/: MainController.java
domain-back-end/demo/src/main/java/com/example/demo/domain/: Job.java  Priority.java  Status.java
domain-back-end/demo/src/main/java/com/example/demo/dto/: JobDTO.java
domain-back-end/demo/src/main/java/com/example/demo/repository/: JobRepository.java
domain-back-end/demo/src/main/java/com/example/demo/service/: JobService.java
domain-back-end/demo/src/main/java/com/example/demo/util/: MultipartUtility.java
domain-back-end/demo/src/main/resources/: application.properties
front-end/: Makefile  cabal.project  science-broker.cabal
front-end/app/: FrontEnd.hs
front-end/app/FrontEnd/: Core.hs  Types.hs
front-end/lib/Broker/: CommandLineOptions.hs
front-end/lib/Broker/Job/: Allocation.hs  Input.hs  Poll.hs  Specification.hs
front-end/lib/Broker/Job/Input/: Internal.hs
front-end/lib/Broker/Job/Specification/: Internal.hs
front-end/lib/broker-disk/Broker/: Disk.hs
front-end/lib/broker-gateway/Broker/: Gateway.hs
front-end/lib/client-cli-options/Client/: CommandLineOptions.hs
front-end/lib/client-file-store/Client/: FileStore.hs
migration/: SNAP.sh  migra_w.sh  new_process.py  print.py  test.sh
project-plan/: Project-Plan.bcf  Project-Plan.dvi  Project-Plan.out  ReportCUNY.cls
src/: science-broker.cabal
src/app/: FrontEnd.hs
src/lib/Broker/: Job.hs
src/lib/Broker/Job/: Class.hs  Generic.hs  Input.hs  Specification.hs
src/lib/Broker/Job/Input/: Internal.hs
src/lib/Broker/Job/Specification/: Internal.hs
src/lib/Data/: Validation.hs
tex/: Project-Plan.aux  Project-Plan.run.xml  Project-Plan.tex
