Cabal-Version: 3.4
Name:          science-broker
Version:       2.2.12
Stability:     Stable
Build-Type:    Simple
               
Author:        Alex Washburn <github@recursion.ninja>
Copyright:     (c) 2015-2022 Alex Washburn
License:       CC-BY-SA-4.0
License-File:  LICENSE

Maintainer:    Alex Washburn <github@recursion.ninja>
Homepage:      https://github.com/recursion-ninja/CSc-85011-Distributed-Computing-Project
Bug-Reports:   https://github.com/recursion-ninja/CSc-85011-Distributed-Computing-Project/issues

Synopsis:      The TUI for the CUNY CSc 85011 Distributed and Cloud Computing Project
Description:   The builds the frontend TUI along with other components
 
Category: CLI TUI Web
Tested-With: GHC == 9.6.1

Source-Repository head
  type: git
  location: https://github.com/recursion-ninja/CSc-85011-Distributed-Computing-Project

-- A litany of GHC warnings designed to alert us during the build of any common
-- pitfalls, future compatibility issues, or coding conventions.
common build-config

  default-language:
    GHC2021

  ghc-options:
    -- Optimization flags
    -O2
    -fexcess-precision
    -fexpose-all-unfoldings
    -flate-specialise
    -fmax-simplifier-iterations=16
    -foptimal-applicative-do
    -fspec-constr-count=8
    -fspec-constr-keen
    -fspecialize-aggressively
    -fstatic-argument-transformation

    -- Usability flags
    -fdiagnostics-color=always
    -fhide-source-paths
    -j
    -- Sanity check warnings:
    --   1. Fail on a warning
    --   2. Include all warnings by default
    --   3. Exclude the undesirable warnings
--    -Werror
    -Weverything
    -- Exclusions:
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-type-defaults
    -Wno-unsafe

    -Wno-unused-top-binds

    
Executable science-broker-terminal

  import:
    build-config

  build-depends:
    science-broker:terminal-layout,
    science-broker:broker-disk,
    science-broker:broker-gateway,
    science-broker:broker-polling,
    science-broker:client-cli-options,
    science-broker:client-file-store,
    aeson,
    base >=4.7 && <5,
    brick,
    bytestring,
    containers,
    directory,
    filepath,
    http-client,
    http-types,
    microlens,
    mtl,
    req,
    stm,               
    vty
                     
  ghc-options:
    -rtsopts
    -threaded
    -with-rtsopts=-N

    -ddump-splices     

  hs-source-dirs:
    app

  main-is:
    FrontEnd.hs

  other-modules:
    FrontEnd.Core
    FrontEnd.Types

  other-extensions:
    TemplateHaskell


Library terminal-layout

  import:
    build-config

  build-depends:
    science-broker:broker-disk,
    aeson,
    base >=4.7 && <5,
    containers,
    microlens,
    microlens-th,
    text,
    
  exposed-modules:
    Broker.Job.Allocation
    Broker.Job.Input
    Broker.Job.Specification

  other-modules:
    Broker.Job.Specification.Internal

  hs-source-dirs:
    lib

  other-extensions:
    TemplateHaskell

  visibility:
    private


Library broker-disk

  import:
    build-config

  build-depends:
    aeson,
    base >=4.7 && <5
    
  exposed-modules:
    Broker.Disk

  hs-source-dirs:
    lib/broker-disk

  visibility:
    private


Library broker-gateway

  import:
    build-config

  build-depends:
    base >=4.7 && <5,
    modern-uri,
    req,
    text,
    
  exposed-modules:
    Broker.Gateway

  hs-source-dirs:
    lib/broker-gateway

  visibility:
    private


Library broker-polling

  import:
    build-config

  build-depends:
    aeson,
    base >=4.7 && <5,
    text,
    
  exposed-modules:
    Broker.Job.Poll

  hs-source-dirs:
    lib

  other-extensions:
    TemplateHaskell

  visibility:
    private


Library client-cli-options

  import:
    build-config

  build-depends:
    science-broker:broker-gateway,
    base >=4.7 && <5,
    optparse-applicative,
    
  exposed-modules:
    Client.CommandLineOptions

  hs-source-dirs:
    lib/client-cli-options

  visibility:
    private


Library client-file-store

  import:
    build-config

  build-depends:
    science-broker:broker-disk,
    base >=4.7 && <5,
    containers,
    filepath,
    req,
    text,
    
  exposed-modules:
    Client.FileStore

  hs-source-dirs:
    lib/client-file-store

  other-extensions:
    TemplateHaskell

  visibility:
    private

